--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="flo.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="IMG_20250420_075305.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Janetgrace.A</h1>
             <p>DEPARTMENT OF COMPUTER SCIENCE</p>
           <p>SRM ARTS AND SCIENCE COLLEGE</p>
@@ -201,4 +201,5 @@
         });
     </script>
 </body>
+
 </html>
